<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/custom_title_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_room_button_rectangle_blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_navi_button_back"
            android:drawablePadding="5dp"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/channel_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

    <!--4 actions buttons-->


    <LinearLayout
        android:id="@+id/top_actions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_title_bar"
        android:background="@drawable/ic_room_rectangle"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="visible">

        <!--静音-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/action_muter"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:checked="true"
                android:button="@drawable/shape_transparent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/room_button_one"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>


        <!--扬声器-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/action_speaker"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:checked="false"
                android:button="@drawable/shape_transparent" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/room_button_two"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>


        <!--关闭摄像头-->
        <LinearLayout
            android:id="@+id/wrapper_action_camera_enabler"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/action_camera_enabler"
                android:layout_width="35dp"
                android:checked="true"
                android:layout_height="35dp"
                android:button="@drawable/shape_transparent"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/room_button_three"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>


        <!--切换摄像头-->
        <LinearLayout
            android:id="@+id/wrapper_action_camera_switcher"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/action_camera_switcher"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:checked="true"
                android:button="@drawable/shape_transparent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/room_button_four"
                android:textColor="@color/white"
                android:textSize="10sp" />


        </LinearLayout>


    </LinearLayout>


    <!--视频通话 语音通话切换部分-->

    <FrameLayout
        android:id="@+id/bottom_actions_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_room_button_rectangle_blue"
        android:padding="6dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_room_button_black_bg"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <!--button wrapper-->

            <LinearLayout
                android:id="@+id/wrapper_action_video_calling"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_room_button_video" />

                <!--视频通话按钮-->
                <TextView
                    android:id="@+id/action_enable_video_call"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/shape_transparent"
                    android:gravity="center_vertical"
                    android:text="@string/video_button"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/wrapper_action_voice_calling"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">


                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_room_button_audio" />

                <!--语音通话按钮-->
                <TextView
                    android:id="@+id/action_enable_voice_call"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/shape_transparent"
                    android:gravity="center_vertical"
                    android:text="@string/micro_button"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


    <!--本地通话 和 远程通话用户头像列表-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_actions_container"
        android:layout_below="@id/top_actions_container">


        <FrameLayout
            android:id="@+id/user_local_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow" />


        <ImageView
            android:id="@+id/user_local_voice_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_room_bg" />


        <LinearLayout
            android:id="@+id/user_remote_views"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/wrapper_session_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_room_bg_talk_time"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/stat_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/yellow"
                android:textSize="10sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/stat_bytes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/app_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/room_prepare"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <Button
            android:id="@+id/action_hung_up"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_above="@id/user_remote_views"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_selector_hung_up" />

    </RelativeLayout>

</RelativeLayout>